[gd_scene load_steps=2 format=3 uid="uid://rc8nlibob262"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_anubm"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_anubm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 601.0
offset_top = 266.0
offset_right = 1027.0
offset_bottom = 525.0

[node name="Display1" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
color = Color(0.996078, 0.12549, 1, 1)

[node name="Display2" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
color = Color(0.996078, 0.12549, 1, 1)

[node name="Display3" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
color = Color(0.996078, 0.12549, 1, 1)

[node name="Display4" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
color = Color(0.996078, 0.12549, 1, 1)

[node name="Display5" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
color = Color(0.996078, 0.12549, 1, 1)

[node name="Display6" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
color = Color(0.996078, 0.12549, 1, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_left = 601.0
offset_top = 266.0
offset_right = 1027.0
offset_bottom = 525.0

[node name="Label1" type="Label" parent="HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label2" type="Label" parent="HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label3" type="Label" parent="HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label4" type="Label" parent="HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label5" type="Label" parent="HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label6" type="Label" parent="HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Button" type="Button" parent="."]
offset_left = 116.0
offset_top = 64.0
offset_right = 290.0
offset_bottom = 109.0
text = "SIMULATE"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
